# vpk-plumber

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
src/: lib.rs  pak.rs
src/common/: detect.rs  file.rs  format.rs  lzham.rs  mod.rs
src/detect/: error.rs  format.rs  mod.rs
src/pak/: error.rs  mod.rs  v1.rs  v2.rs
src/pak/revpk/: cam.rs  format.rs  mod.rs
src/pak/v1/: format.rs  mod.rs
src/pak/v2/: format.rs  mod.rs
src/tests/: file.rs  mod.rs  revpk.rs  v1.rs  v2.rs
src/tests/revpk/: read_file.rs
src/tests/v1/: read_file.rs
src/tests/v2/: mod.rs  read_file.rs
src/util/: error.rs  file.rs  lzham.rs  mod.rs
test_files/: single_file_revpk_dir.vpk  single_file_v1_dir.vpk  single_file_v2_dir.vpk
test_files/portal/: pak01_dir.vpk
test_files/tf2/: tf2_sound_misc_dir.vpk
test_files/titanfall/: client_mp_colony.bsp.pak000_004.vpk  client_mp_common.bsp.pak000_000.vpk.cam  englishclient_mp_colony.bsp.pak000_dir.vpk
tests/: tests.rs
tests/common/: mod.rs
tests/data/revpk/titanfall/: mp_colony.txt
tests/data/v1/: empty_dir.vpk  single_file_dir.vpk  single_file_eof_dir.vpk
tests/data/v1/portal2/: pak01_dir.vpk
tests/data/v2/: single_file_dir.vpk
tests/data/v2/portal/: portal_pak_dir.vpk
tests/detect/: read.rs  roundtrip.rs
tests/revpk/: data.rs  extract.rs  mem_map.rs  mod.rs  read.rs  roundtrip.rs
tests/v1/: data.rs  extract.rs  mem_map.rs  mod.rs  read.rs  roundtrip.rs
tests/v2/: data.rs  extract.rs  mem_map.rs  mod.rs  read.rs  roundtrip.rs
