[package]
name = "sourcepak"
description = "A library for reading and writing Source engine package files."
repository = "https://github.com/barnabwhy/sourcepak-rs/"
license = "MIT"
version = "0.3.0"
edition = "2021"
exclude = [".vscode", ".github", "test_files"]

[features]
respawn = ["revpk", "rpak"]
revpk = ["dep:lzham-alpha-sys"]
rpak = []
mem-map = ["dep:filebuffer"]

[dependencies]
crc = "3.0.1"
lzham-alpha-sys = { version = "0.1.1", optional = true }
filebuffer = { version = "0.4.0", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]