[package]
name = "vpk-plumber"
description = "A fork of sourcepak"
repository = "hhttps://github.com/Daxanius/vpk-plumber"
license = "MIT"
version = "0.3.0"
edition = "2024"
exclude = [".vscode", ".github", "test_files"]

[package.metadata.clippy]
lints = ["clippy::pedantic"]

[features]
rpak = []
respawn = ["revpk", "rpak"]
revpk = ["dep:lzham-alpha-sys"]
mem-map = ["dep:filebuffer"]

[dependencies]
crc = "3.0.1"
lzham-alpha-sys = { version = "0.1.1", optional = true }
filebuffer = { version = "0.4.0", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
