[package]
name = "vpk-plumber"
description = "A fork of sourcepak"
repository = "https://github.com/Daxanius/vpk-plumber"
license = "MIT"
version = "0.4.0"
edition = "2024"
exclude = [".vscode", ".github", "tests/data/*"]

[package.metadata.clippy]
lints = ["clippy::pedantic"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["detect"]
detect = []
revpk = ["dep:lzham-alpha-sys"]
mem-map = ["dep:filebuffer"]

[dependencies]
crc = "3.0.1"
lzham-alpha-sys = { version = "0.1.1", optional = true }
filebuffer = { version = "1.0.0", optional = true }

[dev-dependencies]
tempfile = "3.19.1"
const_format = "0.2.34"
